<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    android:background="#a1f7bc"
    android:orientation="horizontal"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <ImageView
        android:id="@+id/imgProfile"
        android:layout_width="367dp"
        android:layout_height="189dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="10dp"
        android:src="@drawable/noimg"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="145dp"
        android:layout_height="40dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:gravity="center"
        android:text="Estate Name"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/imgProfile"
        tools:layout_editor_absoluteY="340dp"
        app:layout_constraintTop_toBottomOf="@+id/imgProfile"/>

    <TextView
        android:id="@+id/tvName"
        android:layout_width="145dp"
        android:layout_height="38dp"
        android:layout_marginStart="56dp"
        android:layout_marginLeft="56dp"
        android:layout_marginTop="4dp"
        android:gravity="center"
        android:text="Estate Name"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/imgProfile" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="145dp"
        android:layout_height="40dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="56dp"
        android:layout_marginRight="56dp"
        android:gravity="center"
        android:text="Location  "
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/tvaddress"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/tvaddress"
        android:layout_width="145dp"
        android:layout_height="40dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="28dp"
        android:layout_marginRight="28dp"
        android:gravity="center"
        android:text="Location  "
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvName" />


    <TextView
        android:id="@+id/textView3"
        android:layout_width="155dp"
        android:layout_height="40dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:gravity="center"
        android:text="Owner's Name  "
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/tvowner"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/tvowner"
        android:layout_width="145dp"
        android:layout_height="50dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="28dp"
        android:layout_marginRight="28dp"
        android:gravity="center"
        android:text="Owner's Name  "
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvaddress" />

    <TextView

        android:id="@+id/textView4"
        android:layout_width="145dp"
        android:layout_height="40dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="56dp"
        android:layout_marginRight="56dp"
        android:gravity="center"
        android:text="Description "

        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/tvdes"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:id="@+id/tvdes"
        android:layout_width="145dp"
        android:layout_height="60dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="28dp"
        android:layout_marginRight="28dp"
        android:gravity="center"
        android:text="Description "
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvowner" />

    <TextView
        android:id="@+id/textview5"
        android:layout_width="145dp"
        android:layout_height="40dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="56dp"
        android:layout_marginRight="56dp"
        android:gravity="center"
        android:text="Price Rate"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/tvRate"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <TextView
        android:id="@+id/tvRate"
        android:layout_width="145dp"
        android:layout_height="40dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="28dp"
        android:layout_marginRight="28dp"
        android:gravity="center"
        android:text="Price Rate"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvdes" />

    <Button
        android:id="@+id/btnDelete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="Delete"
        app:icon="@drawable/ic_baseline_delete_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvRate" />

</androidx.constraintlayout.widget.ConstraintLayout>