<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_gravity="center"
    tools:context=".Fragments.FavoritesFragments">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="!! Your Favorites !! "
        android:gravity="center"
        android:layout_margin="10dp"
        android:layout_gravity="center"

        android:textSize="35dp">

    </TextView>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvFav"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:foregroundGravity="center"
        />

</LinearLayout>